# my-agent-app

./: .env.example  AGENTS.md  PLANS.md  README.md  podman-compose.yml
config/: librechat.json
mcp/registry/: registry.yaml
services/langgraph/: .env.example  AGENTS.md  Dockerfile  pyproject.toml
services/langgraph/src/langgraph_agent/: __init__.py  config.py  main.py  providers.py  registry.py  routing.py
services/langgraph/src/langgraph_agent/nodes/: executor.py  input_parser.py  planner.py  validator.py
services/langgraph/tests/: test_agent_flow.py
