[project]
name = "langgraph-agent"
version = "0.1.0"
description = "LangGraph-powered agent service for LibreChat"
authors = [
  { name = "LibreChat LangGraph Team" }
]
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0,<0.112",
  "uvicorn[standard]>=0.30,<0.31",
  "pydantic>=2.7,<3",
  "httpx>=0.27,<0.28",
  "langgraph>=0.1.0",
  "python-dotenv>=1.0,<2",
  "pyyaml>=6.0,<7"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9",
  "pytest-asyncio>=0.23,<0.24"
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["tests"]
